--- a/src/pages/DetailedMoviePage/DetailedMoviePage.module.css
+++ b/src/pages/DetailedMoviePage/DetailedMoviePage.module.css
@@ -1,3 +1,20 @@
 .link {
   display: block;
 }
+.Container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+button {
+  max-width: 150px;
+}
+
+.Space {
+  margin: 20px 0;
+}
